kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      automountServiceAccountToken: false
      containers:
        - name: website
          image: ghcr.io/unshade/website:744b83217d2e4bacaba3de1567fddc3d12df3dbf
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
