kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: portfolio
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: website
