kubernetes/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website
  namespace: portfolio
spec:
  parentRefs:
  - name: main
    namespace: envoy-system
    sectionName: https
  hostnames:
    - "www.nstnr.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: website
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
